# Sparkle

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  SPARKLE_MODULAR_PIPELINE.md  analysis.md  library_review_path.md  missingTestCoverage.md  promptImplementLightManagement.md  vcpkg.json
Playground/: CMakeLists.txt  ERELIA.md  FABLE_PROMPT.md
Playground/docs/: 00-overview.md  01-architecture.md  02-data-model.md  README.md  decision-log.md  glossary.md  scenery-prefabs.md  stairway-prefabs.md  voxel-families.md
Playground/docs/03-systems/: animation.md  audio.md  battle-ai.md  battle-effect-resolution.md  battle-foundations.md  battle-presentation.md  battle.md  board.md  creatures-feats.md  encounters-taming.md  modes-encounters-lifecycle.md  rendering-cameras.md  save-meta.md  tooling.md  ui-hud.md  voxel.md  world.md
Playground/docs/code-tour/: README.md  cleanup-proposals.md  level-1-overview.md  level-2-systems.md  level-3-details.md
Playground/docs/diagrams/: 01-class-engine-core.puml  02-class-rendering-3d.puml  03-class-voxel.puml  04-class-world.puml  05-class-board.puml  06-class-battle-phases.puml  07-class-battle-domain.puml  08-class-creatures-feats.puml  09-class-encounters-taming.puml  10-class-ai.puml  11-class-animation.puml  12-class-tooling.puml  20-seq-bootstrap.puml  21-seq-exploration-movement.puml  22-seq-encounter-to-battle.puml  23-seq-battle-action-resolution.puml  24-seq-feat-progression.puml  25-seq-save-load.puml  README.md
Playground/docs/howto/: add-component-logic.md  add-json-definition.md  add-render-command.md  add-tests.md  add-tool-tab.md  build-and-run.md  promote-to-spk.md
Playground/docs/plan/: GDD.md  PROGRESS.md  implementation-plan.md
Playground/srcs/: component2d.cpp  component2d.hpp  entity2d.hpp  game_scene_widget.cpp  game_scene_widget.hpp  main.cpp
Playground/srcs/abilities/: ability.cpp  ability.hpp  ability_definition.cpp  ability_definition.hpp  duration_spec.cpp  duration_spec.hpp  effect.hpp  effect_definition.cpp  effect_definition.hpp  effect_describe.cpp  effect_describe.hpp  targeting_definition.cpp  targeting_definition.hpp
Playground/srcs/ai/: ai_behaviour.cpp  ai_behaviour.hpp  ai_condition.hpp  ai_decision.hpp  ai_definition.cpp  ai_definition.hpp  ai_evaluator.cpp  ai_evaluator.hpp  ai_factory.cpp  ai_factory.hpp
Playground/srcs/animation/: model_definition.cpp  model_definition.hpp
Playground/srcs/battle/: battle_action.cpp  battle_action.hpp  battle_attributes.cpp  battle_attributes.hpp  battle_command.cpp  battle_command.hpp  battle_command_result.cpp  battle_command_result.hpp  battle_context.cpp  battle_context.hpp  battle_event.cpp  battle_event.hpp  battle_event_log.cpp  battle_event_log.hpp  battle_ids.cpp  battle_ids.hpp  battle_input.cpp  battle_input.hpp  battle_lifecycle.hpp  battle_log.hpp  battle_object.cpp  battle_object.hpp  battle_outcome_rules.cpp  battle_outcome_rules.hpp  battle_phase.cpp  battle_phase.hpp  battle_pump.cpp  battle_pump.hpp  battle_rng.cpp  battle_rng.hpp  battle_sequence_ids.hpp  battle_session.cpp  battle_session.hpp  battle_side.hpp  battle_snapshot.cpp  battle_snapshot.hpp  battle_state_digest.cpp  battle_state_digest.hpp  battle_statuses.cpp  battle_statuses.hpp  (+10 more)
Playground/srcs/battle_objects/: battle_object_definition.cpp  battle_object_definition.hpp
Playground/srcs/board/: board_builder.cpp  board_builder.hpp  board_cell.cpp  board_cell.hpp  board_data.cpp  board_data.hpp  board_line_of_sight.cpp  board_line_of_sight.hpp  board_navigation_layer.cpp  board_navigation_layer.hpp  board_occupancy.cpp  board_occupancy.hpp  board_raycaster.cpp  board_raycaster.hpp  board_runtime_registry.cpp  board_runtime_registry.hpp  board_terrain_layer.cpp  board_terrain_layer.hpp  cell_source.cpp  cell_source.hpp  deployment.cpp  deployment.hpp  deployment_layout.cpp  deployment_layout.hpp  handcrafted_battle_board_definition.cpp  handcrafted_battle_board_definition.hpp  line_of_sight.cpp  line_of_sight.hpp  pathfinder.cpp  pathfinder.hpp  traversal_graph.cpp  traversal_graph.hpp  traversal_graph_builder.cpp  traversal_graph_builder.hpp  weighted_path.cpp  weighted_path.hpp
Playground/srcs/components/: actor.hpp  animation2d.hpp  battle_unit_view.hpp  board_overlay_view.cpp  board_overlay_view.hpp  camera2d.cpp  camera2d.hpp  camera3d.cpp  camera3d.hpp  entity3d.hpp  mesh_renderer3d.hpp  player_controller.hpp  sprite_renderer2d.hpp  transform2d.cpp  transform2d.hpp  transform3d.hpp
Playground/srcs/conditions/: condition_definition.cpp  condition_definition.hpp  condition_parser.cpp
Playground/srcs/core/: battle_mode.cpp  battle_mode.hpp  battle_scene.cpp  battle_scene.hpp  combat_definition_validation.cpp  combat_definition_validation.hpp  content_id.cpp  content_id.hpp  creature_instance_id.cpp  creature_instance_id.hpp  definition_fields.cpp  definition_fields.hpp  deterministic_random.hpp  event_center.hpp  exploration_mode.cpp  exploration_mode.hpp  game_context.cpp  game_context.hpp  game_mode.hpp  game_rules.cpp  game_rules.hpp  json.cpp  json.hpp  mode.hpp  mode_manager.cpp  mode_manager.hpp  observable_resource.hpp  paths.cpp  paths.hpp  random_seed.cpp  random_seed.hpp  registries.cpp  registries.hpp  registry.hpp  translation_key.cpp  translation_key.hpp  (+3 more)
Playground/steps/: README.md  step1.md  step2.md  step3.md
Playground/tests/: CMakeLists.txt  expect_cli_size_failure.cmake  fluid_integration_test.cpp  fluid_simulation_logic_test.cpp  game_scene_widget_lifetime_test.cpp  main.cpp  plan_chunk_provider_test.cpp  shape_catalog_test.cpp  voxel_registry_test.cpp  weighted_pool_test.cpp  world_plan_validation_test.cpp  world_raycaster_test.cpp
Playground/tools/: main.cpp
UIShowcase/: CMakeLists.txt  CMakePresets.json  planning.md  vcpkg.json
UIShowcase/includes/: page_support.hpp  showcase_page.hpp  showcase_page_registry.hpp  showcase_root.hpp  showcase_theme.hpp  showcase_widgets.hpp
UIShowcase/srcs/: main.cpp  showcase_page_registry.cpp  showcase_root.cpp
tests/TUs/: CMakeLists.txt
(+2623 files in other folders)
